Fixed bug causing my profile image to be shifted to the left side of the screen

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -38,7 +38,6 @@
   background-size: cover;
   height: 100vh;
   width: auto;
-  position: fixed;
 }
 
 .container {
